nova_tests/strings/neg/plan139_1_neg_str_priv_field.nv
// EXPECT_COMPILE_ERROR E_PRIV_FIELD_READ
//
// Plan 139.1 Ф.A — str lang-item GATE (negative, privacy fires).
//
// `str` is declared `type str value priv { ptr *u8, len int }` in
// std/prelude/core.nv. Its backing-pointer field `ptr` is `priv`, so reading
// `s.ptr` from OUTSIDE the str module (here: module plan139_1.neg_str_priv_field)
// must fire E_PRIV_FIELD_READ (Plan 124 / D220). The byte buffer is only
// reachable via public accessors (`@len`, `@byte_at`, `@as_bytes`).
//
// This supersedes the old oracle-pin nova_tests/plan147/e5_str_ptr_field_ok.nv
// (which read `s.ptr` and EXPECT'd ok under the pre-lang-item hardcoded
// primitive). e5's own header anticipated this flip once the lang-item landed.
module neg.plan139_1_neg_str_priv_field

fn leak(s str) -> *u8 {
    // priv field `ptr` read outside str-method scope → E_PRIV_FIELD_READ.
    s.ptr
}
